change li to dt

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
 
     <dl>
-      <li>Kingdom: Animalia</li>
-      <li>Phylum: Arthropoda</li>
-      <li>Class: Insecta</li>
-      <li>Order: Coleoptera</li>
-      <li>Suborder: Polyphaga</li>
-      <li>Superfamily: Scarabaeoidea</li>
-      <li>Family: Scarabidae</li>
+      <dt>Kingdom: Animalia</dt>
+      <dt>Phylum: Arthropoda</dt>
+      <dt>Class: Insecta</dt>
+      <dt>Order: Coleoptera</dt>
+      <dt>Suborder: Polyphaga</dt>
+      <dt>Superfamily: Scarabaeoidea</dt>
+      <dt>Family: Scarabidae</dt>
     </dl>
 
     <div class="btn-wrap">
