--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
 
     <dl>
-      <dt>Kingdom: Animalia</dt>
-      <dt>Phylum: Arthropoda</dt>
-      <dt>Class: Insecta</dt>
-      <dt>Order: Coleoptera</dt>
-      <dt>Suborder: Polyphaga</dt>
-      <dt>Superfamily: Scarabaeoidea</dt>
-      <dt>Family: Scarabidae</dt>
+      <dt>Kingdom:</dt><dd>Animalia</dd>
+      <dt>Phylum:</dt><dd>Arthropoda</dd>
+      <dt>Class:</dt><dd>Insecta</dd>
+      <dt>Order:</dt><dd>Coleoptera</dd>
+      <dt>Suborder:</dt><dd>Polyphaga</dd>
+      <dt>Superfamily:</dt><dd>Scarabaeoidea</dd>
+      <dt>Family:</dt><dd>Scarabidae</dd>
     </dl>
 
     <div class="btn-wrap">
