Add div tags surround each dd dt.

--- a/index.html
+++ b/index.html
@@ -14,20 +14,34 @@
     <p>Dung beetles are beetles that feed partly or exclusively on dung. A dung beetle can bury dung 250 times heavier than itself in one night.</p>
 
     <dl>
-      <dt>Kingdom:</dt>
+      <div>
+        <dt>Kingdom:</dt>
         <dd>Animalia</dd>
-      <dt>Phylum:</dt>
+      </div>
+      <div>
+        <dt>Phylum:</dt>
         <dd>Arthropoda</dd>
-      <dt>Class:</dt>
+      </div>
+      <div>
+        <dt>Class:</dt>
         <dd>Insecta</dd>
-      <dt>Order:</dt>
+      </div>
+      <div>
+        <dt>Order:</dt>
         <dd>Coleoptera</dd>
-      <dt>Suborder:</dt>
+      </div>
+      <div>
+        <dt>Suborder:</dt>
         <dd>Polyphaga</dd>
-      <dt>Superfamily:</dt>
+      </div>
+      <div>
+        <dt>Superfamily:</dt>
         <dd>Scarabaeoidea</dd>
-      <dt>Family:</dt>
+      </div>
+      <div>
+        <dt>Family:</dt>
         <dd>Scarabidae</dd>
+      </div>
     </dl>
 
     <div class="btn-wrap">
