Align the button at the bottom by adding a footer

--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
       </div>
     </dl>
 
+  <footer>
     <div class="btn-wrap">
       <span class="btn">Learn more…</span>
     </div>
+  </footer>
   </a>
 
 </body>
